# fragile_test_sample

./: README.md
app/: Cargo.toml
app/src/: main.rs
app/src/postgres/: companies.rs  users.rs
app/src/redis/: contents.rs
db/sql/table/: companies.sql  users.sql
development/: Dockerfile.app  docker-compose.yaml
