[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
env_logger = "0.11.5"
chrono = { version = "0.4", features = ["serde", "clock"] }
derive_builder = "0.20"
postgres-derive = "0.4.6"
postgres-types = { version="0.2", features=[
    "derive",
    "with-chrono-0_4",
    "with-serde_json-1",
    "with-uuid-1",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7", "serde"] }
tokio-postgres = "0.7"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }